--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/app.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/app.component.html
@@ -11,4 +11,5 @@
     </ol>
   </div>
 </section>
-<app-footer></app-footer>
+<app-department></app-department>
+<app-footer></app-footer>  <!-- component directive-->
