--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/department/department.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/department/department.component.html
@@ -124,7 +124,7 @@
                             <b *ngSwitchCase="depart.deptBudget>=50000 && depart.deptBudget<=100000">LB</b>
                             <b *ngSwitchCase="depart.deptBudget>=100001 && depart.deptBudget<=5000000">MB</b>
                             <b *ngSwitchCase="depart.deptBudget>=5000001 && depart.deptBudget<=10000000">HB</b>
-                            <b *ngSwitchDefault="">NA</b>
+                            <b *ngSwitchDefault>NA</b>
                         </span>
                     </td>
             </tr>
