--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/department/department.component.css
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/department/department.component.css
@@ -8,3 +8,15 @@
 .flexContainer{
     display: flex;
 }
+
+.fontStyle{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    font-weight: bold;
+    font-style: italic;
+}
+.colorStyle{
+    color: aqua;
+    background-color: blue;
+    border: 2px solid red;
+}
