--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/app.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/app.component.html
@@ -1,4 +1,12 @@
 
 <app-header></app-header>
-<app-department></app-department>
+
+<!-- dynamic view-->
+<section style="border: 10px double green;">
+    <p>This view gets updated when Rout path matches</p>
+    <router-outlet></router-outlet>
+</section>
+
+
+
 <app-footer></app-footer>  <!-- component directive-->
