--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/login/login.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/login/login.component.html
@@ -11,10 +11,14 @@
                 <td><label>Password:</label></td><td><input type="password" id="UsPass"></td>
             </tr>
             <tr>
-                <button type="sumbit">Sign in</button>
+                <input type="submit" value="Sign in">
+                <input type="reset" value="Reset">
             </tr>
         </table>  
     </div>
     </form>
+    <div>
+        new User??<h5><i><a>click here to register</a></i> </h5>
+    </div>
 </section>
 
