--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/navbar/navbar.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="myNav">
     <ol class="navbar">
-        <li><a  routerLink="home">HOME</a></li>
-        <li><a href="#">LOGIN/REGISTER</a></li>
+        <li><a  routerLink="vina">HOME</a></li>
+        <li><a routerLink="login">LOGIN</a></li>
         <li><a href="#">EMPLOYEES</a></li>
         <li><a routerLink="departments">DEPARMENTS</a></li>
         <li><a href="#">CONTACT US</a></li>
