--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
@@ -22,9 +22,13 @@
                 <td><label>UserAdresss:</label></td><td><input  id="UsAdd"></td>
             </tr>
             <tr>
-                <button type="sumbit">OK</button>
+                <input type="submit" value="REGISTER"/>
+                <input type="reset" value="RESET"/>
             </tr>
         </table>       
+    </div>
+    <div>
+       existing User??<h5><i><a routerLink="/login">click here to login</a></i> </h5>
     </div>
     </form>
 </section>
