--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/login/login.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/login/login.component.html
@@ -18,7 +18,7 @@
     </div>
     </form>
     <div>
-        new User??<h5><i><a>click here to register</a></i> </h5>
+        new User??<h5><i><a routerLink="/register">click here to register</a></i> </h5>
     </div>
 </section>
 
