--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
@@ -28,7 +28,7 @@
         </table>       
     </div>
     <div>
-       existing User??<h5><i><a routerLink="/login">click here to login</a></i> </h5>
+       existing User??<a routerLink="/login">click here to login</a>
     </div>
     </form>
 </section>
