--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/home/home.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/home/home.component.html
@@ -20,4 +20,13 @@ EMS helps to eliminate the manual process and saves a lot
         <li>Lower Costs</li>
     </ul>
     </div>
+    <div>
+        <nav>
+            <a routerLink="companydetails">Show Company Details</a>
+        </nav>
+    </div>
+    <section>
+        <h3>Child Rout view gets loaded here</h3>
+        <router-outlet></router-outlet>
+    </section>
 </section>
