--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
@@ -1,25 +1,30 @@
 <section>
     <form >
     <div>
-        <h1>Registration Form</h1>
+        <h1>Employee Joining Form</h1>
         <table class="tblClass">
             <tr>
-                <td><label>Name:</label></td><td><input id="UsNme"></td>
+                <td><label>Name:</label></td><td><input type="text"></td>
             </tr>
             <tr>
-                <td><label>Father's Name:</label></td><td><input  id="UsF"></td>
+                <td><label>Salary:</label></td><td><input type="number" ></td>
             </tr>
             <tr>
-                <td><label>Mobile:</label></td><td><input type="number" id="UsMob"></td>
+                <td><label>Gender:</label></td><td>Male:<input type="radio">Female:<input type="radio"></td>
             </tr>
             <tr>
-                <td><label>Gender:</label></td><td>Male:<input type="radio" checked="true" id="UsM">Female:<input type="radio" id="usF"></td>
+                <td><label>Address:</label></td><td><input type="text"></td>
             </tr>
             <tr>
-                <td><label>Upload Photo:</label></td><td><input type="file"  id="UsImg"></td>
-            </tr>
-            <tr>
-                <td><label>UserAdresss:</label></td><td><input  id="UsAdd"></td>
+                <td><label>Department:</label></td>
+                <td>
+                    <select>
+                    <option value="LD">Learning and Developement</option>
+                    <option value="JW">Java Web</option>
+                    <option value="DN">Dot Net</option>
+                    <option value="HR">Human Resource</option>
+                </select>
+            </td>
             </tr>
             <tr>
                 <input type="submit" value="REGISTER"/>
