--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
@@ -3,22 +3,23 @@
     <div>
         <h1>Employee Joining Form</h1>
         <table class="tblClass">
+            <tr><td><label>Name:</label></td>
+                <td><input type="text"></td></tr>
             <tr>
-                <td><label>Name:</label></td><td><input type="text"></td>
+                <td><label>Salary:</label></td>
+                <td><input type="number" ></td></tr>
+            <tr>
+                <td><label>Gender:</label></td>
+                <td>Male: <input type="radio"> Female: <input type="radio"></td>
             </tr>
             <tr>
-                <td><label>Salary:</label></td><td><input type="number" ></td>
-            </tr>
-            <tr>
-                <td><label>Gender:</label></td><td>Male:<input type="radio">Female:<input type="radio"></td>
-            </tr>
-            <tr>
-                <td><label>Address:</label></td><td><input type="text"></td>
+                <td><label>Address:</label></td>
+                <td><input type="text"></td>
             </tr>
             <tr>
                 <td><label>Department:</label></td>
                 <td>
-                    <select>
+                <select>
                     <option value="LD">Learning and Developement</option>
                     <option value="JW">Java Web</option>
                     <option value="DN">Dot Net</option>
