--- a/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
+++ b/ANGULAR WORKSPACE/EmployeeManagementSystem/src/app/register/register.component.html
@@ -1,25 +1,26 @@
 <section>
-    <form >
+    <form [formGroup]="registerForm" (submit)="collectData()"> <!-- formGroup linked with form-->
     <div>
         <h1>Employee Joining Form</h1>
         <table class="tblClass">
             <tr><td><label>Name:</label></td>
-                <td><input type="text"></td></tr>
+                <td><input type="text" formControlName="empName"></td></tr>
             <tr>
                 <td><label>Salary:</label></td>
-                <td><input type="number" ></td></tr>
+                <td><input type="number" formControlName="empSalary"></td></tr>
             <tr>
                 <td><label>Gender:</label></td>
-                <td>Male: <input type="radio"> Female: <input type="radio"></td>
+                <td>Male: <input type="radio" name="empGender" formControlName="empGender">
+                     Female: <input type="radio" name="empGender" formControlName="empGender"></td>
             </tr>
             <tr>
                 <td><label>Address:</label></td>
-                <td><input type="text"></td>
+                <td><input type="text" formControlName="empAddress"></td>
             </tr>
             <tr>
                 <td><label>Department:</label></td>
                 <td>
-                <select>
+                <select formControlName="departmentId">
                     <option value="LD">Learning and Developement</option>
                     <option value="JW">Java Web</option>
                     <option value="DN">Dot Net</option>
